feat(docker): 全栈编排与 Demo 初始化
- Docker Compose 编排 MySQL/Qdrant/Zoekt/RootSeeker/Admin
- 默认 MySQL 配置模式，app_config 完整 Demo（LLM/Embedding/Qdrant/Zoekt 等）
- 预置 Demo 仓库 psf/requests，Git 仓库发现使用 MySQL 存储
- Admin 端口改为 8088 避免与本地 Apache 冲突
- Admin 编码修复：JDBC UTF-8、JVM 编码、HTTP 编码
- job_queue.py Python 3.9 兼容（Callable|None -> Optional）
- 国内镜像配置说明与脚本

Made-with: Cursor